--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,6 @@ archives_base_name=advancedparadigm
 
 # Dependencies
 fabric_api_version=0.141.3+1.21.11
+
+# TechReborn Energy API (https://github.com/TechReborn/Energy)
+energy_version=4.2.0
