--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+
+	maven {
+		url = "https://maven.fabricmc.net/"
+	}
 }
 
 loom {
@@ -44,6 +48,9 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
+
+	// TechReborn Energy API (embedded into the built jar via include)
+	include modApi("teamreborn:energy:${project.energy_version}")
 	
 }
 
